# Polymarket-Copy-Trading-Bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
polymarket_copy_trading_bot/: __init__.py  __main__.py  main.py
polymarket_copy_trading_bot/config/: copy_strategy.py  db.py  env.py
polymarket_copy_trading_bot/interfaces/: user.py
polymarket_copy_trading_bot/models/: user_history.py
polymarket_copy_trading_bot/scripts/: check_allowance.py  check_both_wallets.py  check_my_stats.py  check_open_orders.py  check_order_book.py  check_pending_nonce.py  check_pending_txs.py  check_pnl_discrepancy.py  check_position_balance_onchain.py  check_positions_detailed.py  check_proxy_wallet.py  check_recent_activity.py  close_position_by_id.py  close_resolved_positions.py  close_stale_positions.py  compute_gnosis_safe_address.py  fetch_historical_trades.py  find_gnosis_safe_proxy.py  find_my_eoa.py  find_real_proxy_wallet.py  get_positions_ids.py  get_redeemable_ids.py  health_check.py  help.py  manual_sell.py  redeem_position_by_id.py  redeem_resolved_positions.py  sell_large_positions.py  set_allowances_once.py  set_token_allowance.py  setup.py  transfer_positions_to_gnosis_safe.py  unwrap_neg_risk_collateral.py  verify_allowance.py
polymarket_copy_trading_bot/services/: trade_executor.py  trade_monitor.py
polymarket_copy_trading_bot/utils/: clob_client.py  constants.py  create_clob_client.py  error_helpers.py  errors.py  fetch_data.py  get_my_balance.py  health_check.py  logger.py  position_helpers.py  (+1 more)
(+7 files in other folders)
