[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-copy-trading-bot"
version = "1.0.0"
description = "Polymarket Copy Trading Bot (Python port)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_copy_trading_bot*"]